tests/invalid-syntax/54394_wrong_return_type/wrong_return_type.agu
-- Author: 54394, Afonso Esteves

let vim_better_than_emacs (_) : Int -> Unit[] =
    new Int[f | f]

